golang wrapper for ccache framework;

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+.idea/
+
 # Binaries for programs and plugins
+ccache
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+*.a
 
 # Test binary, built with `go test -c`
 *.test
@@ -13,3 +17,4 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+ccache-c
